fix text alignment in aboutme

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1695,6 +1695,7 @@
 		}
 
 	#about-me {
+		width: 102%;
 		text-align: left;
 	}
 
